[tool.poetry]
name = "PythonTinderLikesPhotoScript"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinsleym2312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
